# oz_01_main-004-BE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gitmessage.txt  pyproject.toml
.github/: pull_request_template.md
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
comments/: admin.py  models.py  serializers.py  urls.py  views.py
common/: models.py
config/: asgi.py  base.py  local.py  prod.py  routing.py  urls.py
favorite/: admin.py  models.py  serializers.py  urls.py  views.py
foods/: admin.py  models.py  serializers.py  urls.py  views.py
nginx/: django.conf
recipes/: admin.py  models.py  serializers.py  urls.py  views.py
users/: models.py  serializers.py  urls.py  views.py
