[tool.poetry]
name = "oz-01-main-004-be"
version = "0.1.0"
description = ""
authors = ["SwanyCastle <seunghwan712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-environ = "^0.11.2"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
gunicorn = "^22.0.0"
requests = "^2.31.0"
boto3 = "^1.34.98"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
